--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/style.css">
-    <script src="javascripts/jquery.onepage-scroll.js"></script>
-    <script src="javascripts/jquery-3.1.1.js"></script>
-    <script>
-    $(function() {
-    $('#main').onepage_scroll();
-    })
-    </script>
-    <title>test-1</title>
-  </head>
-
-  <body>
-    <div class="main">
-      <section>
-        <div class="overlay"></div>
-      </section>
-      <section></section>
-    </div>
-
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="javascripts/jquery.onepage-scroll.js"></script>
     <script>
   $(document).ready(function(){
     $(".main").onepage_scroll({
       sectionContainer: "section",
-      loop: true,
-      responsiveFallback: false
+      responsiveFallback: 600,
+      loop: true
     });
   });
 </script>
+
+  <title>LE TIGRE</title>
+
+  </head>
+
+  <body>
+    <div class="main">
+      <section class="section-one">
+        <div class="bg">
+          <div class="logo"><img src="img/logo.png" alt="LE TIGRE"></div>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+    </div>
   </body>
 </html>
