сделала меню, собираюсь делать кнопки

--- a/index.html
+++ b/index.html
@@ -46,11 +46,18 @@ $(document).ready(function(){
   <body>
     <div id="wrapper">
       <nav class="fullscreen-nav">
-        <ul class="menu">
-          <li>work</li>
-          <li>about</li>
-          <li>art</li>
-        </ul>
+        <div class="menu">
+          <div><a href="#" data-href="home">HOME</a></div>
+          <div><a href="#" data-href="about">ABOUT</a></div>
+          <div><a href="#" data-href="band">BAND</a></div>
+        </div>
+        <div class="footer">
+          <div class="share">
+            <a class="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+          </div>
+        </div>
       </nav>
 
       <div id="nav-icon">
