--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="css/style.css">
+
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="javascripts/jquery.onepage-scroll.js"></script>
     <script type="text/javascript" src="javascripts/typed.js"></script>
@@ -18,6 +19,7 @@
       });
     });
     </script>
+
 
     <script>
     $(document).ready(function(){
@@ -41,33 +43,33 @@
   </head>
 
   <body>
-    <div id="wrapper">
-      <nav class="fullscreen-nav">
-        <div class="menu">
-          <div><a href="#" data-href="home">HOME</a></div>
-          <div><a href="#" data-href="about">ABOUT</a></div>
-          <div><a href="#" data-href="band">BAND</a></div>
-        </div>
-
-        <div class="footer">
-          <div class="share">
-            <a class="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-          </div>
-        </div>
-      </nav>
-
-      <div id="nav-icon">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
 
     <div class="main">
+
+      <div id="wrapper">
+        <nav class="fullscreen-nav">
+          <div class="menu">
+            <div><a href="#" data-href="home">HOME</a></div>
+            <div><a href="#" data-href="about">ABOUT</a></div>
+            <div><a href="#" data-href="band">BAND</a></div>
+          </div>
+          <div class="footer">
+            <div class="share">
+              <a class="#"></a>
+              <a href="#"></a>
+              <a href="#"></a>
+            </div>
+          </div>
+        </nav>
+
+        <div id="nav-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+
       <section class="section-one">
-        <div class="flash"></div>
         <div class="bg">
           <div class="logo"><img src="img/logo.png" alt="LE TIGRE"></div>
         </div>
@@ -98,7 +100,10 @@
           </div>
         </div>
       </div>
+      <section class="section-four">
+        <div class="square_2"></div>
+      </section>
     </section>
-  </div>
-</body>
+    </div>
+  </body>
 </html>
