--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
   </head>
 
   <body>
-
     <div class="main">
-
       <div id="wrapper">
         <nav class="fullscreen-nav">
           <div class="menu">
@@ -67,43 +65,47 @@
           <span></span>
           <span></span>
         </div>
-      </div>
 
-      <section class="section-one">
+      <section class="page1">
         <div class="bg">
           <div class="logo"><img src="img/logo.png" alt="LE TIGRE"></div>
         </div>
       </section>
 
-      <section class="section-two">
+      <section class="page2">
         <div class="text">
           <span class="element" style="white-space:pre"></span>
         </div>
         <div class="square"></div>
+        <div id="music"></div>
       </section>
 
-      <section class="section-three">
+      <section class="page3">
         <div class="head">
-          <div id="girl_1" class="floating">
-            <div class="name_1">
-              <span class="name">KATHLEEN</span>
+          <div class="kathleen">
+            <div id="girl_1" class="floating">
+              <div class="name" id="name_1">KATHLEEN</div>
+            </div>
+          </div>
+
+          <div class="jocelyn">
+            <div id="boy" class="floating">
+              <div class="name" id="name_2">JOCELYN</div>
+            </div>
+          </div>
+
+          <div class="johanna">
+            <div id="girl_2" class="floating">
+              <div class="name" id="name_3">JOHANNA</div>
+            </div>
           </div>
         </div>
-        <div id="girl_2" class="floating">
-          <div class="name_2">
-            <span class="name">JOHANNA</span>
-          </div>
-        </div>
-        <div id="boy" class="floating">
-          <div class="name_3">
-            <span class="name">JOCELYN</span>
-          </div>
-        </div>
-      </div>
-      <section class="section-four">
-        <div class="square_2"></div>
       </section>
-    </section>
+
+      <section class="page4">
+        <div class="bg_2"></div>
+      </section>
     </div>
+  </div>
   </body>
 </html>
