теперь на сайте есть музыка, еще доделываю некоторые страницы

--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
   </head>
 
   <body>
+    <!-- <audio src="bg.mp3" autoplay="autoplay" loop="loop"></audio> -->
     <div class="main">
       <div id="wrapper">
         <nav class="fullscreen-nav">
           <div class="menu">
-            <div><a href="#" data-href="home">HOME</a></div>
             <div><a href="#" data-href="about">ABOUT</a></div>
-            <div><a href="#" data-href="band">BAND</a></div>
           </div>
           <div class="footer">
             <div class="share">
@@ -73,7 +72,7 @@
       </section>
 
       <section class="page2">
-        <div class="text">
+        <div class="riot_grrrl">
           <span class="element" style="white-space:pre"></span>
         </div>
         <div class="square"></div>
@@ -81,6 +80,16 @@
       </section>
 
       <section class="page3">
+        <div class="bg_2"></div>
+        <div class="gif">
+          <img src="img/wow.gif">
+        </div>
+        <div class="song_text">
+          <p id="song">EVERY DAY AND NIGHT<br>EVERY DAY AND NIGHT<br>I CAN SEE YOUR DISCO DISCO<br>DICK IS SUCKING MY HEART OUT OF MY MIND<br>I'M OUTTA TIME, I'M OUTTA FUCKIN TIME<br>I'M A GASOLINE GUT WITH A VASELINE MIND BUT<br>WANNA DISCO? WANNA SEE ME DISCO?<br>LET ME HEAR YOU DEPOLITICIZE MY RHYME<br>ONE, TWO, THREE, FOUR<br>YOU GOT WHAT YOU BEEN ASKING FOR<br>YOU'RE SO POLICY FREE AND<br>YOU'RE FANTASY WHEELS AND EVERYTHING YOU THINK<br>AND EVERYTHING YOU FEEL IS ALRIGHT,<br>ALRIGHT, ALRIGHT, ALRIGHT,ALRIGHT<br>I TAKE YOU HOME NOW WATCH ME GET YOU HOT<br>YOU'RE JUST A PARROT WHEN YOU'RE SCREAMING AND YOU'RE SHOUTING<br>"MORE CRACKERS PLEASE, MORE CRACKERS PLEASE"<br>YOU WANT WHAT YOU WANT BUT YOU DON'T WANNA BE ON YOUR KNEES<br>WHO DOES YOUR... WHO DOES YOUR HAIR?<br>WHO TOOK THE BOMP FROM THE BOMPALOMPALOMP?<br>WHO TOOK THE RAM FROM THE RAMALAMADINGDONG?<br>WHO TOOK THE BOMP FROM THE BOMPALOMPALOMP<br>WHO TOOK THE RAM FROM THE RAMALAMADINGDONG?<br>FINE THANK YOU<br>HOW ARE YOU?<br>FINE THANK YOU<br>YOU BOUGHT A NEW VAN THE FIRST YEAR OF YOUR BAND<br>YOU'RE COOL AND I HARDLY WANNA SAY "NOT" BECAUSE I'M SO BORED<br>THAT I'D BE ENTERTAINED EVEN BY A STUPID LINOLEUM FLOOR, LINOLEUM FLOOR<br>YOUR LYRICS ARE DUMB LIKE A LINOLEUM FLOOR<br>I'LL WALK ON IT<br>I'LL WALK ALL OVER YOU<br>WALK ON IT, WALK ON IT, WALKING ONE, TWO<br>I'LL WALK ON IT<br>I'LL WALK ALL OVER YOU</p>
+        </div>
+      </section>
+
+      <section class="page4">
         <div class="head">
           <div class="kathleen">
             <div id="girl_1" class="floating">
@@ -100,10 +109,6 @@
             </div>
           </div>
         </div>
-      </section>
-
-      <section class="page4">
-        <div class="bg_2"></div>
       </section>
     </div>
   </div>
