--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
+    <meta name="description" content="Интерактивный сайт посвященный панк-группе LE TIGRE">
+    <meta name="keywords" content="html, css, hse, design, art, gif, punk, music">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:title" content="LE TIGRE">
+    <meta property="og:description" content="Интерактивный сайт посвященный панк-группе LE TIGRE">
+    <meta property="og:image" content="">
+
+    <title>LE TIGRE</title>
+
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="javascripts/jquery.onepage-scroll.js"></script>
@@ -19,7 +32,6 @@
       });
     });
     </script>
-
 
     <script>
     $(document).ready(function(){
@@ -38,12 +50,10 @@
       });
     });
     </script>
-
-    <title>LE TIGRE</title>
   </head>
 
   <body>
-    <!-- <audio src="bg.mp3" autoplay="autoplay" loop="loop"></audio> -->
+  <!-- <audio src="bg.mp3" autoplay="autoplay" loop="loop"></audio> -->
     <div class="main">
       <div id="wrapper">
         <nav class="fullscreen-nav">
@@ -52,9 +62,9 @@
           </div>
           <div class="footer">
             <div class="share">
-              <a class="#"></a>
-              <a href="#"></a>
-              <a href="#"></a>
+              <a href="https://www.facebook.com/" class="icon-facebook"></a><
+              <a href="https://github.com" class="icon-github"></a>
+              <a href="https://instagram.com" class="icon-instagram"></a>
             </div>
           </div>
         </nav>
@@ -110,7 +120,11 @@
           </div>
         </div>
       </section>
+
+      <section class="page5">
+        <div class="pink"></div>
+      </section>
     </div>
   </div>
-  </body>
+</body>
 </html>
