--- a/test.html
+++ b/test.html
@@ -5,16 +5,14 @@
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 
+    <script type="text/javascript">
+
+
+    </script>
+
     <title>page 1</title>
   </head>
   <body>
-    <svg width="100%" height="100%" viewBox="30 -50 600 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
- <path id="path">
-		<animate attributeName="d" from="m0,110 h0" to="m0,110 h1100" dur="6.8s" begin="0s" repeatCount="indefinite"/>
-	</path>
-	<text id="song" fill='hsla(36, 95%, 85%, 1)'>
-		<textPath xlink:href="#path">RIOT GRRRRRRRL</textPath>
-	</text>
-</svg>
+  </div>
   </body>
 </html>
