--- a/test.html
+++ b/test.html
@@ -4,15 +4,407 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-
-    <script type="text/javascript">
-
-
-    </script>
-
-    <title>page 1</title>
+    <title>google maps</title>
+    <style>
+      #map {
+        width: 100%;
+        height: 700px;
+      }
+    </style>
   </head>
+
   <body>
-  </div>
+    <div id="map"></div>
+     <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+    <script type="text/javascript">
+    function initMap() {
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat: 53.419399, lng: -2.988650},
+        zoom: 9,
+        disableDefaultUI: true,
+        styles: [
+  {
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#ff63d5"
+      }
+    ]
+  },
+  {
+    "elementType": "labels.icon",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#616161"
+      }
+    ]
+  },
+  {
+    "elementType": "labels.text.stroke",
+    "stylers": [
+      {
+        "color": "#f5f5f5"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#ffffff"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative",
+    "elementType": "labels.text.stroke",
+    "stylers": [
+      {
+        "color": "#000000"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.land_parcel",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.land_parcel",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#bdbdbd"
+      }
+    ]
+  },
+  {
+    "featureType": "administrative.neighborhood",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#eeeeee"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "elementType": "labels.text",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "poi",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#757575"
+      }
+    ]
+  },
+  {
+    "featureType": "poi.park",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#e5e5e5"
+      }
+    ]
+  },
+  {
+    "featureType": "poi.park",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#9e9e9e"
+      }
+    ]
+  },
+  {
+    "featureType": "road",
+    "elementType": "labels",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road",
+    "elementType": "labels.icon",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road.arterial",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road.arterial",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#757575"
+      }
+    ]
+  },
+  {
+    "featureType": "road.highway",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#dadada"
+      }
+    ]
+  },
+  {
+    "featureType": "road.highway",
+    "elementType": "labels",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road.highway",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#616161"
+      }
+    ]
+  },
+  {
+    "featureType": "road.local",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "road.local",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#9e9e9e"
+      }
+    ]
+  },
+  {
+    "featureType": "transit",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "transit.line",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#e5e5e5"
+      }
+    ]
+  },
+  {
+    "featureType": "transit.station",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#eeeeee"
+      }
+    ]
+  },
+  {
+    "featureType": "water",
+    "elementType": "geometry",
+    "stylers": [
+      {
+        "color": "#9eff46"
+      }
+    ]
+  },
+  {
+    "featureType": "water",
+    "elementType": "labels.text",
+    "stylers": [
+      {
+        "visibility": "off"
+      }
+    ]
+  },
+  {
+    "featureType": "water",
+    "elementType": "labels.text.fill",
+    "stylers": [
+      {
+        "color": "#9e9e9e"
+      }
+    ]
+  }
+]
+});
+var marker_1 = new google.maps.Marker({
+      position: {lat: 53.401500, lng: -2.988800},
+      map: map,
+      title: 'Liverpool',
+      icon: 'marker.png'
+});
+
+var contentString_1 = '<div id="content">'+
+          '<div id="siteNotice">'+
+          '</div>'+
+          '<h1 id="firstHeading" class="firstHeading">18 March, 9 p.m.</h1>'+
+          '<div id="bodyContent">'+
+          '<p>HAUS</p>'+
+          '<p>Liverpool, 72-76 Renshaw St'+
+          '</p>'+
+          '</div>'+
+          '</div>';
+
+    var infowindow_1 = new google.maps.InfoWindow({
+       content: contentString_1,
+       maxWidth: 400
+    });
+
+    marker_1.addListener('click', function() {
+        infowindow_1.open(map, marker_1);
+    });
+
+
+var marker_2 = new google.maps.Marker({
+  position: {lat: 53.465097, lng: -2.241783},
+  map: map,
+  title: 'Manchester',
+  icon: 'marker.png'
+});
+
+var contentString_2 = '<div id="content">'+
+          '<div id="siteNotice">'+
+          '</div>'+
+          '<h1 id="firstHeading" class="firstHeading">21 March, 8 p.m.</h1>'+
+          '<div id="bodyContent">'+
+          '<p>Band on the Wall</p>'+
+          '<p>Manchester, 25 Swan St'+
+          '</p>'+
+          '</div>'+
+          '</div>';
+
+    var infowindow_2 = new google.maps.InfoWindow({
+       content: contentString_2,
+       maxWidth: 400
+    });
+
+    marker_2.addListener('click', function() {
+        infowindow_2.open(map, marker_2);
+    });
+
+
+var marker_3 = new google.maps.Marker({
+  position: {lat: 53.753076, lng: -2.700020},
+  map: map,
+  title: 'Preston',
+  icon: 'marker.png'
+});
+
+var contentString_3 = '<div id="content">'+
+          '<div id="siteNotice">'+
+          '</div>'+
+          '<h1 id="firstHeading" class="firstHeading">19 March, 8 p.m.</h1>'+
+          '<div id="bodyContent">'+
+          '<p>Black Horse</p>'+
+          '<p>Preston, 166 Friargate'+
+          '</p>'+
+          '</div>'+
+          '</div>';
+
+    var infowindow_3 = new google.maps.InfoWindow({
+       content: contentString_3,
+       maxWidth: 400
+    });
+
+    marker_3.addListener('click', function() {
+        infowindow_3.open(map, marker_3);
+    });
+
+var marker_4 = new google.maps.Marker({
+  position: {lat: 52.974471, lng: -2.682641},
+  map: map,
+  title: 'Whitchurch',
+  icon: 'marker.png'
+});
+
+var contentString_4 = '<div id="content">'+
+          '<div id="siteNotice">'+
+          '</div>'+
+          '<h1 id="firstHeading" class="firstHeading">27 March, 7 p.m</h1>'+
+          '<div id="bodyContent">'+
+          '<p">The Red Lyon</p>'+
+          '<p">Whitchurch, 46 High St'+
+          '</p>'+
+          '</div>'+
+          '</div>';
+
+    var infowindow_4 = new google.maps.InfoWindow({
+       content: contentString_4,
+       maxWidth: 400
+    });
+
+    marker_4.addListener('click', function() {
+        infowindow_4.open(map, marker_4);
+    });
+
+    }
+    </script>
   </body>
 </html>
