--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
 
     <meta name="description" content="Интерактивный сайт посвященный панк-группе LE TIGRE">
-    <meta name="keywords" content="html, css, hse, design, art, gif, punk, music">
+    <meta name="keywords" content="html, css, hse, design, art, gif, punk, music, pink">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
