--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="icon" type="image/png" href="img/favicon.png" />
-
-    <script src="https://code.jquery.com/jquery-1.9.1.js" integrity="sha256-e9gNBsAcA0DBuRWbm0oZfbiCyhjLrI6bmqAl5o+ZjUA="crossorigin="anonymous"></script>
+    <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="javascripts/jquery.onepage-scroll.js"></script>
     <script type="text/javascript" src="javascripts/typed.js"></script>
     <script type="text/javascript" src="javascripts/jquery.inview.js"></script>
@@ -30,7 +29,7 @@
   </head>
 
   <body>
-  <!-- <audio src="bg.mp3" autoplay="autoplay" loop="loop"></audio> -->
+  <audio src="bg.mp3" autoplay="autoplay" loop="loop"></audio>
     <div class="main">
       <div id="wrapper">
         <nav class="fullscreen-nav">
