--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="icon" type="image/png" href="img/favicon.png" />
-    <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script>
+    <!-- <script type="text/javascript" src="javascripts/jquery-3.1.1.js"></script> -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="javascripts/jquery.onepage-scroll.js"></script>
     <script type="text/javascript" src="javascripts/typed.js"></script>
     <script type="text/javascript" src="javascripts/jquery.inview.js"></script>
